{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 23,
  "lineage": "4c0461fd-0cab-f476-115f-4f6567c25bab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0cc01d6aebb312400",
            "id": "rtb-0cc01d6aebb312400",
            "owner_id": "826026847098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wp_private"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "wp_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:826026847098:loadbalancer/awsterraform-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "awsterraform-elb-1486556963.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "awsterraform-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "awsterraform-elb",
            "security_groups": [
              "sg-07cbe837d5d840206"
            ],
            "source_security_group": "826026847098/wp_public_sg",
            "source_security_group_id": "sg-07cbe837d5d840206",
            "subnets": [
              "subnet-000ed4e8a1ce8e00a",
              "subnet-0568871b64497e548"
            ],
            "tags": {
              "Name": "wp_awsterraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.wp_public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_subnet.wp_public2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:826026847098:instance/i-0e7fd4a0761498742",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e7fd4a0761498742",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "batman",
            "monitoring": false,
            "primary_network_interface_id": "eni-0981231d5a0f63404",
            "private_dns": "ip-10-0-1-90.ec2.internal",
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-3-91-215-66.compute-1.amazonaws.com",
            "public_ip": "3.91.215.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0d26341dd0f1c2f52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0568871b64497e548",
            "tags": {
              "Name": "wp_dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a7c591ee9184b2b"
            ]
          },
          "depends_on": [
            "aws_key_pair.wp_auth",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        },
        {
          "status": "tainted",
          "deposed": "282dd39d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-b73b63a0",
            "arn": "arn:aws:ec2:us-east-1:826026847098:instance/i-08ff92a5344fed4a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08ff92a5344fed4a1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "batman",
            "monitoring": false,
            "primary_network_interface_id": "eni-02bcf859538c8c4a4",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-54-91-82-33.compute-1.amazonaws.com",
            "public_ip": "54.91.82.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-00e1890f4dc8901fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0568871b64497e548",
            "tags": {
              "Name": "wp_dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a7c591ee9184b2b"
            ]
          },
          "depends_on": [
            "aws_key_pair.wp_auth",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a1968b3d3c87d1a8",
            "owner_id": "826026847098",
            "tags": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08ffa8cd014898afd",
            "owner_id": "826026847098",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1968b3d3c87d1a8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fee06982370a58c",
            "route_table_id": "rtb-0cc01d6aebb312400",
            "subnet_id": "subnet-0a606bee43c8d5c94"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0731951f819c43c84",
            "route_table_id": "rtb-0cc01d6aebb312400",
            "subnet_id": "subnet-06263b33be9f8a1ab"
          },
          "depends_on": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e113d3ff5d6d54cf",
            "route_table_id": "rtb-08ffa8cd014898afd",
            "subnet_id": "subnet-000ed4e8a1ce8e00a"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad26dbfab14e1d1c",
            "route_table_id": "rtb-08ffa8cd014898afd",
            "subnet_id": "subnet-0568871b64497e548"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_dev_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:security-group/sg-05a7c591ee9184b2b",
            "description": "Used for access to the dev instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a7c591ee9184b2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.22/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.22/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg",
            "name_prefix": null,
            "owner_id": "826026847098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:security-group/sg-024314ec25bc12f76",
            "description": "Used for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024314ec25bc12f76",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wp_private_sg",
            "name_prefix": null,
            "owner_id": "826026847098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:security-group/sg-07cbe837d5d840206",
            "description": "Used for public and private instances for load balancer access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cbe837d5d840206",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_public_sg",
            "name_prefix": null,
            "owner_id": "826026847098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:subnet/subnet-0a606bee43c8d5c94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a606bee43c8d5c94",
            "map_public_ip_on_launch": false,
            "owner_id": "826026847098",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:subnet/subnet-06263b33be9f8a1ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06263b33be9f8a1ab",
            "map_public_ip_on_launch": false,
            "owner_id": "826026847098",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:subnet/subnet-0568871b64497e548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0568871b64497e548",
            "map_public_ip_on_launch": true,
            "owner_id": "826026847098",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:subnet/subnet-000ed4e8a1ce8e00a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-000ed4e8a1ce8e00a",
            "map_public_ip_on_launch": true,
            "owner_id": "826026847098",
            "tags": {
              "Name": "wp_public2"
            },
            "vpc_id": "vpc-0a16ea16a7474fbee"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826026847098:vpc/vpc-0a16ea16a7474fbee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048e0bb26f08ffae4",
            "default_route_table_id": "rtb-0cc01d6aebb312400",
            "default_security_group_id": "sg-0e95664878527543e",
            "dhcp_options_id": "dopt-fafdc281",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a16ea16a7474fbee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cc01d6aebb312400",
            "owner_id": "826026847098",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    }
  ]
}